Style placement revision
Realigned styling and implemented some link functionality

--- a/pages/home.html
+++ b/pages/home.html
@@ -157,20 +157,23 @@
           <div class="container-fluid">
               <ul class="nav navbar-nav">
                   <!-- WE -->
-                  <li><a href="#" title="Wishlist" style="color:#000000">W</a></li>
+                  <li><a href="#" title="Wish List" style="color:#000000">W</a></li>
                   <li><a href="#" title="Extras" style="color:#000000">E</a></li>
                   <!-- CAN -->
                   <li><a href="#" title="Contact Us" style="color:#000000">C</a></li>
                   <li><a href="#" title="About Us" style="color:#000000">A</a></li>
                   <li><a href="#" title="Need a Website or App?" style="color:#000000">N</a></li>
                   <!-- HELP -->
-                  <li><a href="pages/intro.html" title="Home" style="color:#000000">H</a></li>
-                  <li><a href="#" title="Enter for Help" style="color:#000000">E</a></li>
+                  <li><a href="home.html" title="Home" style="color:#000000">H</a></li>
+                  <li><a href="#" title="Explore for Help" style="color:#000000">E</a></li>
                   <li><a href="#" title="Links" style="color:#000000">L</a></li>
                   <li><a href="#" title="Please Tell a Friend" style="color:#000000">P</a></li>
               </ul>
           </div>
-      </nav>
+        </nav>
+        <div>
+        <a href="../index.html" class="bottom-of-page-action">--- Intro ---</a>
+        </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
